# qiniuyun

./: .gitignore  2D游戏素材生成工具项目开发文档.md  CMakeLists.txt  README.md  index.html  package.json  server.js
.github/: pull_request_template.md
backend/: requirements.txt  run.py
backend/app/: database.py  main.py  schemas.py
backend/app/routers/: assets.py  config.py  health.py
backend/app/services/: ai_generator.py  cpp_engine.py  exporter.py  mock_generator.py  prompt_provider.py
backend/tests/: test_api.py
docs/: DEMO_SCRIPT.md  PR_PLAN.md  SUBMISSION_CHECKLIST.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  store.ts  types.ts
scripts/: build-cpp.ps1  dev-ark.ps1  dev.ps1  start-cpp.ps1
src/: app.js  core.js  renderer.js  styles.css
src_cpp/: cli.cpp  core.cpp  core.h  json.h  server.cpp
tests/: core.test.js  server.test.js
